Mon Aug 11 10:14:47 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* modules.c (save_d): When parsing -s option, don't assume that
	we will hit a space before we hit the '\0'.
	(struct sortrec): Document allocation policies (status quo except
	status field is now malloc'd).
	(cat_module): No longer need to set the '\0' at the end of the
	status field back to ' ', as it no longer shares storage with the
	rest field.
	* sanity.sh (modules): Add "statusmod" to test for above fix.

Sun Aug 10 12:18:31 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Remove TODO item about more keyword expansion tests.
	The keyword test and others cover it pretty well, and such an item
	isn't useful unless it is specific.

	* sanity.sh (importb): New tests test "cvs import -b".

	* mkmodules.c: Update comment with more reasons why having
	CVSROOT/passwd be a regular administrative file would be a Bad
	Idea.

	* server.c (switch_to_user): Add comment about checking for errors
	from setuid and friends.

Wed Aug  6 13:48:29 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (main): Add comment about errors writing CVS/Root in
	need_to_create_root code.

Tue Aug  5 22:05:20 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* entries.c (write_entries): If trouble writing Entries.Backup,
	make it a warning not an error.

Wed Jul 30 08:42:04 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* parseinfo.c (parse_config): If AUTH_SERVER_SUPPORT is not
	defined, don't set system_auth.

	* version.c: Change version number to 1.9.15.

	* Version 1.9.14.

	* create_adm.c, cvs.h (Create_Admin): If new argument WARN is set,
	then make creating the CVS directory itself a warning not a fatal
	error.  New return value indicates whether we did this.
	* checkout.c (build_one_dir), client.c (call_in_directory):
	Pass WARN as one.
	* add.c, client.c, checkout.c, modules.c, update.c: Pass WARN as
	zero for all other Create_Admin callers.